# clickhouse-olap-poc

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  stats.md
src/clickhouse_olap_poc/: compare_with_mysql.py  compare_with_postgresql.py  generate_50M_data_by_faker_once.py  generate_data_by_faker.py  main.py  setup_database.py  setup_db____v2_backup.py
src/clickhouse_olap_poc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
